--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
             <div class="container">
                 <div class="header_bottom-menu d-flex align-items-center justify-content-between flex-wrap">
                     <div class="menu_logo">
-                        <img src="assets/ima/ima-logo.png" alt="">
+                        <a href="index.html"><img src="assets/ima/ima-logo.png" alt=""></a>
                     </div>
                     <!-- <div class="header_bottom-toggle ">
                         <i class="fa fa-bars"></i>
                     </div> -->
                     <ul class="menu_navbar pl-lg-0 d-flex align-items-center mb-0 flex-wrap">
                         <li class="menu_navbar-item"><a href="" class="item_link d-block active">Project</a></li>
-                        <li class="menu_navbar-item"><a href="" class="item_link d-block">Properties</a></li>
+                        <li class="menu_navbar-item"><a href="status.html" class="item_link d-block">Properties</a></li>
                         <li class="menu_navbar-item"><a href="" class="item_link d-block">News</a></li>
                         <li class="menu_navbar-item"><a href="" class="item_link d-block">Carrers</a></li>
                         <li class="menu_navbar-item"><a href="" class="item_link d-block">Contact</a></li>
                         <li class="menu_navbar-item">
                             <button class="btn btn-orange btn-menu d-flex align-items-center border-radius-5">
-                                <img src="assets/ima/ima-icon-plus.png" alt="">
-                                <span class="btn-text text-white ml-2">Add Properties</span>
+                               <a href="account.html"><img src="assets/ima/ima-icon-plus.png" alt="">
+                                <span class="btn-text text-white ml-2">Add Properties</span></a> 
                             </button>
                         </li>
                     </ul>
