--- a/status.html
+++ b/status.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="header_bottom-menu d-flex align-items-center justify-content-between flex-wrap">
                 <div class="menu_logo">
-                    <img src="assets/ima/ima-logo.png" alt="">
+                    <a href="index.html"><img src="assets/ima/ima-logo.png" alt=""></a>
                 </div>
                 <!-- <div class="header_bottom-toggle ">
                     <i class="fa fa-bars"></i>
